--- a/FaceRecognitionTrainer.ipynb
+++ b/FaceRecognitionTrainer.ipynb
@@ -166,6 +166,100 @@
     "print(\"Predicted label:\", labels.get(id_now, \"Unknown\"))\n",
     "print(\"Confidence:\", confidence)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fa27709",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "from PIL import Image\n",
+    "\n",
+    "base_dir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
+    "print(base_dir)\n",
+    "image_dir = os.path.join(base_dir, \"faces/Raul\")\n",
+    "print(image_dir)\n",
+    "\n",
+    "\n",
+    "face_cascade = cv2.CascadeClassifier(cv2.data.haarcascades + 'haarcascade_frontalface_default.xml') # Face classifier\n",
+    "recognizer = cv2.face.LBPHFaceRecognizer_create() # Face recognizer\n",
+    "current_id = 0\n",
+    "label_ids = {} # dictionary containing all the people that have been identified\n",
+    "y_labels = [] # list of numbers related to the labels\n",
+    "x_train = [] # picture values\n",
+    "\n",
+    "for root, dirs, files in os.walk(image_dir):\n",
+    "    for file in files:\n",
+    "        if file.endswith(\"jpg\") or file.endswith(\"png\") or file.endswith(\"jpeg\"):\n",
+    "            path = os.path.join(root, file)\n",
+    "            label = os.path.basename(path).replace(\".jpg\", \"\").replace(\".png\", \"\").replace(\" \", \"-\").lower()\n",
+    "            print(label, path)\n",
+    "            \n",
+    "            if label not in label_ids:\n",
+    "                label_ids[label] = current_id\n",
+    "                current_id += 1\n",
+    "            id_now = label_ids[label]\n",
+    "            print(label_ids)\n",
+    "\n",
+    "            pil_image = Image.open(path).convert(\"L\") # open image and convert it to grayscale\n",
+    "            image_array = np.array(pil_image, \"uint8\")\n",
+    "            print(image_array)\n",
+    "\n",
+    "            # Detect faces in the image\n",
+    "            faces = face_cascade.detectMultiScale(\n",
+    "                image_array,\n",
+    "                scaleFactor = 1.21,\n",
+    "                minNeighbors = 4,\n",
+    "                minSize = (20, 20),\n",
+    "                flags = cv2.CASCADE_SCALE_IMAGE\n",
+    "            )\n",
+    "\n",
+    "            # Draw a rectangle around the faces\n",
+    "            for (x, y, w, h) in faces:\n",
+    "                roi = image_array[y:y+h, x:x+w]\n",
+    "                x_train.append(roi) # this is our training data\n",
+    "                y_labels.append(id_now)\n",
+    "\n",
+    "# save all labels as a \"labels.pickle\" file (in the same directory)\n",
+    "with open(\"labels.pickle\", \"wb\") as file: # \"wb\" stands for \"writing bytes\"\n",
+    "    pickle.dump(label_ids, file)\n",
+    "\n",
+    "recognizer.train(x_train, np.array(y_labels))\n",
+    "recognizer.save(\"trainer.yml\")\n",
+    "print(\"DONE!\")\n",
+    "\n",
+    "import cv2\n",
+    "import pickle\n",
+    "\n",
+    "# Load trained recognizer\n",
+    "recognizer = cv2.face.LBPHFaceRecognizer_create()\n",
+    "recognizer.read(\"trainer.yml\")\n",
+    "\n",
+    "# Load label mapping\n",
+    "with open(\"labels.pickle\", \"rb\") as f:\n",
+    "    original_labels = pickle.load(f)\n",
+    "    labels = {v: k for k, v in original_labels.items()}\n",
+    "\n",
+    "# Load an image from your training data\n",
+    "img_path = \"faces/Raul/IMG_9580 2.jpeg\"  # <- Replace with actual path\n",
+    "image = cv2.imread(img_path, cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "# Optional: resize to match training size\n",
+    "image = cv2.resize(image, (100, 100))  # Only if you resized during training\n",
+    "\n",
+    "# Recognize face\n",
+    "id_now, confidence = recognizer.predict(image)\n",
+    "\n",
+    "# Print results\n",
+    "print(\"Predicted label:\", labels.get(id_now, \"Unknown\"))\n",
+    "print(\"Confidence:\", confidence)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
